[package]
name = "maprox-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", default-features = false }
geo-types = "0.7.9"

matchbox_socket = { git = "https://github.com/gibbz00/matchbox", branch = "try_update_peers" }
ciborium = "0.2"
async-executor = "1.5.1"
futures-lite = "1.13.0"
wasm-bindgen-futures = "0.4"