[package]
name = "maprox-application"
authors = ["Gabriel Hansson"]
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.10" }
bevy_panorbit_camera = "0.6"

flatgeobuf = { version = "3.25", default-features = false }
geozero = "0.9"
geo-bevy = {git = "https://github.com/gibbz00/geo-bevy/", branch = "no_try_from_int" }
fastrand = "2.0"
geo-types = "0.7"
maprox-api = { path = "../maprox-api" }

[target.'cfg(target = "wasm32-unknown-unknown")'.dev-dependencies]
wasm-bindgen-test = "0.2"

[target.'cfg(target = "x86_64-unknown-linux-gnu")'.dependencies]
bevy = { version = "0.10", features = ["wayland"] }

[target.'cfg(target = "x86_64-unknown-linux-gnu")'.dev-dependencies]
bevy = { version = "0.10", features = ["dynamic_linking",  "wayland"] }
