[package]
name = "maprox-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.28.2"
log = { version = "0.4", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

maprox-common = { path = "../../maprox-common" }
flatgeobuf = { version = "3.25.0", default-features = false }
geozero = "0.9.9"
