[package]
name = "maprox-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
futures-timer = "3.0"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["EventTarget", "Document", "Element"] }

gloo-events = "0.1"
gloo-utils = "0.1"
gloo-net = { version = "0.3" ,default-features = false, features = ["http"] }

log = { version = "0.4", default-features = false }
console_log = "1.0"
console_error_panic_hook = "0.1"

maprox-api = { path = "../../crates/maprox-api" }
flatgeobuf = { version = "3.25", default-features = false }
geozero = "0.9"
